Merge #4518 change in master